Fixed footer on mobile

--- a/public/components/footer/footer.css
+++ b/public/components/footer/footer.css
@@ -1,13 +1,13 @@
 footer {
     position: relative;
     color: var(--c-white);
-    padding: 72px 0 48px;
+    padding: 48px 0;
 }
 
 .footer-wrapper {
     display: grid;
     grid-template-columns: repeat(2, auto);
-    grid-gap: 48px;
+    grid-gap: 12px 48px;
     margin: auto;
     align-items: center;
     justify-content: center;
@@ -27,6 +27,10 @@ footer {
     max-width: 100%;
 }
 
+.social-link:last-of-type {
+    margin-right: 0;
+}
+
 .copyright {
     font-size: var(--f-size-sml);
     word-spacing: 4px;
@@ -43,11 +47,21 @@ footer {
     font-size: var(--f-size-sml);
 }
 
-.footer-socials,
-.footer-nav {
-    margin-bottom: 12px;
+.footer-nav .link:last-of-type,
+.footer-legal .link:last-of-type {
+    margin-right: 0;
 }
 
 .footer-socials {
     display: flex;
+}
+
+@media screen and (max-width: 640px) {
+    .footer-wrapper {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+    .footer-socials {
+        justify-content: center;
+    }
 }
